--- a/about.html
+++ b/about.html
@@ -75,11 +75,35 @@
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                  <span class="section-heading-lower">About Our Cafe</span>
+                  <span class="section-heading-upper"></span>
+                  <span class="section-heading-lower">About me</span>
                 </h2>
-                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-                <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+                <p>
+                  I am Dev Agrawal (The name 'Dev' translates to 'God', but I don't let that 
+                  get to my head :P ). I am a first-year Information Technology major at the 
+                  University of Cincinnati. I am also an aspiring web and mobile developer, 
+                  and I have been involved in freelance development for 2 years.
+                </p>
+                <p>
+                  I was introduced into this world on the 9th of May 1999, the last summer of the 
+                  millenium, in the beautiful and diverse country of India. I was born to highly
+                  socially active parents, with a large age gap between me and all of my older
+                  cousins, including my brother. These factors made me a very socially-awkward
+                  person. So I spent a lot of years trying to overcome my introversion and make
+                  friends, but never succeeded. But soon I learnt how I can use my Introversion
+                  to my advantage.
+                </p>
+                <p>
+                  I got interested into the field of computer science very early, when my
+                  brother introduced my to something called "C++". The power of making a computer
+                  do whatever I wanted through text commands felt amazing. And then my love 
+                  of learning kicked in, which made me spend hours everyday learning about programming
+                  and software development. School was boring, so I had a lot of time to dedicate
+                  to my newfound mission.
+                </p>
+                <p class="text-center">
+                  <a href="">Check out my resume here!</a>
+                </p>
               </div>
             </div>
           </div>
@@ -89,7 +113,7 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Made by Davian Studios</p>
       </div>
     </footer>
 
