--- a/experiences.html
+++ b/experiences.html
@@ -66,10 +66,34 @@
         </div>
       </div>
     </nav>
+
+    <section class="page-section">
+      <div class="container">
+          <h1 style="color: wheat">My Honors Experiences</h1>
+        <div class="product-item">
+          <div class="product-item-title d-flex">
+            <div class="bg-faded p-5 d-flex ml-auto rounded">
+              <h2 class="section-heading mb-0">
+                <span class="section-heading-upper">Coming soon</span>
+                <span class="section-heading-lower">LeaderShape Institute</span>
+              </h2>
+            </div>
+          </div>
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+          <div class="product-item-description d-flex mr-auto">
+            <div class="bg-faded p-5 rounded">
+              <p class="mb-0">
+                  Hoping for a good <em>experience</em> :P!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Made by Davian Studios</p>
       </div>
     </footer>
 
