--- a/gcsp.html
+++ b/gcsp.html
@@ -69,7 +69,7 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Made by Davian Studios</p>
       </div>
     </footer>
 
