--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Contact me | Dev Agrawal</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -73,75 +73,41 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Come On In</span>
-                <span class="section-heading-lower">We're Open</span>
+                <span class="section-heading-lower">Talk to me!</span>
               </h2>
-              <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Sunday
-                  <span class="ml-auto">Closed</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Monday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Tuesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Wednesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Thursday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Friday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
-                </li>
-                <li class="list-unstyled-item list-hours-item d-flex">
-                  Saturday
-                  <span class="ml-auto">9:00 AM to 5:00 PM</span>
-                </li>
-              </ul>
-              <p class="address mb-5">
-                <em>
-                  <strong>1116 Orchard Street</strong>
-                  <br>
-                  Golden Valley, Minnesota
-                </em>
+              <p>
+                I might be an Introvert, but I love talking to new people about anything
+                from new possibilities and innovations in the field of technology to
+                the existence of magic and sorcery, or from the next Marvel movie predictions
+                to the meaning and purpose of life!
               </p>
+              <br>
               <p class="mb-0">
                 <small>
-                  <em>Call Anytime</em>
+                  <em>The most reliable form of communication - Emails!</em>
                 </small>
                 <br>
-                (317) 585-8468
+                agrawadv@mail.uc.edu <br> devagrawal09@gmail.com
               </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="page-section about-heading">
-      <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
-        <div class="about-heading-content">
-          <div class="row">
-            <div class="col-xl-9 col-lg-10 mx-auto">
-              <div class="bg-faded rounded p-5">
-                <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                  <span class="section-heading-lower">About Our Cafe</span>
-                </h2>
-                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-                <p class="mb-0">We guarantee that you will fall in
-                  <em>lust</em>
-                  with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
-              </div>
+              <br>
+              <p class="mb-0">
+                <small>
+                  <em>Check out my work and stories!</em>
+                </small>
+                <br>
+                <a href="https://github.com/devagrawal09/">Github</a> <br>
+                <a href="https://www.linkedin.com/in/dev-agrawal-88449b157/">LinkedIn</a> <br>
+                <a href="https://medium.com/@devagrawal09">Medium</a>
+              </p>
+              <br>
+              <p class="mb-0">
+                <small>
+                  <em>Social media ftw!</em>
+                </small>
+                <br>
+                <a href="https://www.facebook.com/dadevil09">Facebook</a> <br>
+                <a href="https://www.instagram.com/dadevil_666/">Instagram</a>
+              </p>
             </div>
           </div>
         </div>
