--- a/pitch.html
+++ b/pitch.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Problem Pitch | Dev Agrawal</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -66,6 +66,12 @@
         </div>
       </div>
     </nav>
+
+    <section class="page-section clearfix">
+        <div class="container">
+          <h1 style="text-align: center; color: wheat;">Coming Soon!</h1>
+        </div>
+      </section>
     
     <footer class="footer text-faded text-center py-5">
       <div class="container">
