--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
                   to my newfound mission.
                 </p>
                 <p class="text-center">
-                  <a href="">Check out my resume here!</a>
+                  <a href="resume.pdf">Check out my resume here!</a>
                 </p>
               </div>
             </div>
