--- a/pitch.html
+++ b/pitch.html
@@ -1,88 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Problem Pitch | Dev Agrawal</title>
+  <title>Problem Pitch | Dev Agrawal</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/business-casual.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/business-casual.min.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">Portfolio</span>
-      <span class="site-heading-lower">Dev Agrawal</span>
-    </h1>
+  <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <span class="site-heading-upper text-primary mb-3">Portfolio</span>
+    <span class="site-heading-lower">Dev Agrawal</span>
+  </h1>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About Me</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="experiences.html">Honors Experiences</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="review.html">Year in Review</a>
-            </li>
-            <li class="nav-item active px-lg-4 dropdown">
-              <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
-                Gateway to University Honors
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="pitch.html">Problem Pitch</a>
-                <a class="dropdown-item" href="gcsp.html">Global Citizen Scholar Plan</a>
-              </div>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
-            </li>
-          </ul>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="index.html">Home</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="about.html">About Me</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="experiences.html">Honors Experiences</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="review.html">Year in Review</a>
+          </li>
+          <li class="nav-item active px-lg-4 dropdown">
+            <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
+              Gateway to University Honors
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="pitch.html">Problem Pitch</a>
+              <a class="dropdown-item" href="gcsp.html">Global Citizen Scholar Plan</a>
+            </div>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section class="page-section about-heading">
+    <div class="container">
+      <div class="pitch-content">
+        <div class="row">
+          <div class="col-xl-9 col-lg-10 mx-auto">
+            <div class="bg-faded rounded p-5 text-justify">
+              <h2 class="section-heading mb-4 text-center">
+                <span class="section-heading-upper">Reflection</span>
+                <span class="section-heading-lower">Problem Pitch</span>
+              </h2>
+              <p>
+                In the beginning of October 2018, I chose the topic <strong>Cure for diseases (Cancer, aids, etc)</strong> for working on as a first step towards becoming a “Global Citizen Scholar”. To be honest, I did not have a lot of prior knowledge on interest in this field. I chose it because it was the topic that I was “most comfortable” with. But about a month later, I was glad that I made this decision.
+              </p>
+              <p>
+                I was working with two other students on this problem, I saw them taking this with so much interest and sincerity, it made me wonder “Why? How?”. Both of my partners had a lot of knowledge, experience and contacts that they could put to use for working on this problem. I know that because I have been there. I have always taken up projects in fields of my interest. This was probably the first time I had moved so far from my comfort zone.
+              </p>
+              <p>
+                Then it hit me. We are not born as a “Global Citizen Scholar”. To be one,you need to grow and develop. You need to step outside your comfort zone and find new ways to help yourself and the people around you. So I did. I started doing my homework. I started looking into new developments in the field of medicine and pharmacy. I also discussed potential interview candidates with my partners. We had a brief and informative talk with James Hester, a Roche Diagnostics sales representative for Northern Indiana. The interview gave me new insight into the whole process of medicine research, testing, marketing and utilization. James gave us interesting knowledge into the making and working of a cancer treatment, and how the presence of a specific gene mutation can affect not only the severity of the disease, but also decides whether the treatment will work or not. He also told us about how the pharmaceutical industry could change in the near future with the advent of new technologies, which will help us better understand the biology of these diseases.
+              </p>
+              <p>
+                Unfortunately, this is an area where getting involved is not easy, as it requires a significant amount of knowledge and experience to make a significant contribution. Or, atleast that’s what I thought. James told us that getting involved in this area is a lot easier than I think, because researchers are constantly looking for interested students to hire as interns and assistants, and they make a significant contribution in moving the project forward.
+              </p>
+              <p>
+                This whole experience taught me why the Honors program wants us to be “Global Citizen Scholars”, and what that exactly means. It is not only about helping others, but also about self-development (and that’s the part that appeals to me the most because, you know, I’m selfish ;P). I know that there will be challenges in this new mission, and I am ready to face them.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
+    </div>
+  </section>
 
-    <section class="page-section clearfix">
-        <div class="container">
-          <h1 style="text-align: center; color: wheat;">Coming Soon!</h1>
-        </div>
-      </section>
-    
-    <footer class="footer text-faded text-center py-5">
-      <div class="container">
-        <p class="m-0 small">Made by Davian Studios</p>
-      </div>
-    </footer>
+  <footer class="footer text-faded text-center py-5">
+    <div class="container">
+      <p class="m-0 small">Made by Davian Studios</p>
+    </div>
+  </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  </body>
+</body>
 
 </html>
