--- a/gcsp.html
+++ b/gcsp.html
@@ -1,90 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Global Citizen Scholar Plan | Dev Agrawal</title>
+  <title>Global Citizen Scholar Plan | Dev Agrawal</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/business-casual.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/business-casual.min.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">Portfolio</span>
-      <span class="site-heading-lower">Dev Agrawal</span>
-    </h1>
+  <h1 class="site-heading text-center text-white d-none d-lg-block">
+    <span class="site-heading-upper text-primary mb-3">Portfolio</span>
+    <span class="site-heading-lower">Dev Agrawal</span>
+  </h1>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="index.html">Home</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="about.html">About Me</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="experiences.html">Honors Experiences</a>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="review.html">Year in Review</a>
+          </li>
+          <li class="nav-item active px-lg-4 dropdown">
+            <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
+              Gateway to University Honors
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="pitch.html">Problem Pitch</a>
+              <a class="dropdown-item" href="gcsp.html">Global Citizen Scholar Plan</a>
+            </div>
+          </li>
+          <li class="nav-item px-lg-4">
+            <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <section class="page-section clearfix">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About Me</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="experiences.html">Honors Experiences</a>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="review.html">Year in Review</a>
-            </li>
-            <li class="nav-item active px-lg-4 dropdown">
-              <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
-                Gateway to University Honors
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="pitch.html">Problem Pitch</a>
-                <a class="dropdown-item" href="gcsp.html">Global Citizen Scholar Plan</a>
-              </div>
-            </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
-            </li>
-          </ul>
+        <h5 style="text-align: justify; color: wheat;"><em>
+          I am driven by my beliefs in passion, competency, and knowledge. I pursue these passions by utilizing my core strengths of analysis, exploration, and deliberative planning. I plan to live out these values through opportunities where I am researching and building to achieve excellence and reflection that impacts communities and technology. To do so, I will seek opportunities to use technology in new ways and change our perception of the world. When I face challenges or obstacles along the way, I will remember to stay flexible and maintain a hopeful outlook.
+        </em></h5>
+      </div>
+    </section>
+
+  <section class="page-section about-heading">
+    <div class="container">
+      <div class="pitch-content">
+        <div class="row">
+          <div class="col-xl-9 col-lg-10 mx-auto">
+            <div class="bg-faded rounded p-5 text-justify">
+              <h2 class="section-heading mb-4 text-center">
+                <span class="section-heading-lower">Global Citizen Scholar Plan</span>
+              </h2>
+              <p>
+                The world is run on ideas and beliefs. Our ideas point the way to go, and our beliefs guide us throughout the journey. This journey, called “life”, is a long and complicated one, and is full of not only obstacles, but twists and loops which can bring even the most prepared travelers to their submission. The key to a successful journey is to stick to the most basic virtues of your life, which are your ideas and your beliefs. Or at least, this is the popular opinion.
+              </p>
+              <p>
+                What people don’t realize is that sometimes, you cannot stick to your ideas while holding on to your beliefs. This conflict has a way of making the strongest people enter existential crisis. Think about it yourself – would you hold on to a set of beliefs you have gathered over your life that define who you are as an individual? Or can you sacrifice your beliefs for an idea that could potentially change you and your life, and something that does a greater good to the community?
+              </p>
+              <p>
+                It might seem easy to theorize that you can always stick to your beliefs and still work on your ideas. But believe me, everyone faces this conflict at least once in their lifetime. Most people spend their lifetime trying to figure out what to stick to. And the strongest people are the ones who want to work on their best ideas as much as they want to hold on to their beliefs, and are therefore hit the worst when they have to choose one.
+              </p>
+              <p>
+                I have been fortunate enough to face this conflict early on in my life, when making the choice could not have devastated me. I chose to run towards my ideas, work on my future, and serve the greater good, even if it meant sacrificing what I believe in. I am not suggesting in any way that choosing ideas over beliefs is the right thing to do. What I will suggest, however, is that there is a “better” choice for everyone out there. I have no idea as to how to know what it is. Mine just came to me.
+              </p>
+              <p>
+                So, what is it that I have planned for myself? A social worker? A scientist? A rockstar?
+              </p>
+              <p>
+                I choose 2 simple ideas to be my guide – the first is a desire to reach greatness. It is the part of me that wants to be a name that every person on the planet knows. Its goals are very ambitious, even selfish sometimes. This is my primary objective, and it helps me make long-term decisions.
+              </p>
+              <p>
+                But it is pretty easy to get lost and take wrong turns if you only have such a large ambition. Which is why I have the second idea – changing others’ lives for the better. This is a selfless mission of bringing about a change in the community, one that not only empowers the helpless, but also changes the way we perceive the world around us. Often when I get lost looking at the big picture and thinking about my ambition, this idea of greater good tells me what to do and brings me back on track.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
+    </div>
+  </section>
 
-    
+  <footer class="footer text-faded text-center py-5">
+    <div class="container">
+      <p class="m-0 small">Made by Davian Studios</p>
+    </div>
+  </footer>
 
-    <section class="page-section clearfix">
-        <div class="container">
-          <h1 style="text-align: center; color: wheat;">Coming Soon!</h1>
-        </div>
-      </section>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <footer class="footer text-faded text-center py-5">
-      <div class="container">
-        <p class="m-0 small">Made by Davian Studios</p>
-      </div>
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  </body>
+</body>
 
 </html>
