--- a/gcsp.html
+++ b/gcsp.html
@@ -71,9 +71,14 @@
 
   <section class="page-section clearfix">
       <div class="container">
-        <h5 style="text-align: justify; color: wheat;"><em>
-          I am driven by my beliefs in passion, competency, and knowledge. I pursue these passions by utilizing my core strengths of analysis, exploration, and deliberative planning. I plan to live out these values through opportunities where I am researching and building to achieve excellence and reflection that impacts communities and technology. To do so, I will seek opportunities to use technology in new ways and change our perception of the world. When I face challenges or obstacles along the way, I will remember to stay flexible and maintain a hopeful outlook.
-        </em></h5>
+        <h5 style="text-align: justify; color: wheat;">
+          <em>
+            I am driven by my beliefs in passion, competency, and knowledge. I pursue these passions by utilizing my core strengths of analysis, exploration, and deliberative planning. I plan to live out these values through opportunities where I am researching and building to achieve excellence and reflection that impacts communities and technology. To do so, I will seek opportunities to use technology in new ways and change our perception of the world. When I face challenges or obstacles along the way, I will remember to stay flexible and maintain a hopeful outlook.
+          </em> <br>
+          <small class="float-right">
+            My Global Citizen Scholar Mission
+          </small>
+        </h5>
       </div>
     </section>
 
@@ -106,6 +111,15 @@
               </p>
               <p>
                 But it is pretty easy to get lost and take wrong turns if you only have such a large ambition. Which is why I have the second idea – changing others’ lives for the better. This is a selfless mission of bringing about a change in the community, one that not only empowers the helpless, but also changes the way we perceive the world around us. Often when I get lost looking at the big picture and thinking about my ambition, this idea of greater good tells me what to do and brings me back on track.
+              </p>
+              <p>
+                  How do I achieve greatness and service my community? I again have a simple idea to stick to here – Find a way to achieve your goals doing what you like the most. If you know that I am majoring in Information Technology, it should come as no surprise that I intend to use my knowledge of technology to achieve both my goals. Knowledge is another competency that drives my actions – an endless thirst for knowledge, regardless of its utility. My love of learning new things fuels my actions and accomplishments.
+              </p>
+              <p>
+                  Reflection is also a competency that affects my decisions, and it’s one of the major topics of interest in the Honors program. Throughout the Gateway class, we have been encouraged to reflect upon our activities. This is something I am fond of, because your best teacher is your own past. Your accomplishments teach you about your strengths and how to use them to your advantage, and your mistakes tell you about your weaknesses and how to overcome them. Unfortunately, a lot of people do not realize the benefits of reflection and see it merely as a waste of time.
+              </p>
+              <p>
+                  These are the new set of beliefs I have adopted that will help me realize my mission of greatness and service to the community.
               </p>
             </div>
           </div>
