leadershape reflection added

--- a/experiences.html
+++ b/experiences.html
@@ -39,28 +39,28 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Home</a>
+              <a class="nav-link text-uppercase text-expanded" href="../index.html">Home</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">About Me</a>
+              <a class="nav-link text-uppercase text-expanded" href="../about.html">About Me</a>
             </li>
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="experiences.html">Honors Experiences</a>
+              <a class="nav-link text-uppercase text-expanded" href="index.html">Honors Experiences</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="review.html">Year in Review</a>
+              <a class="nav-link text-uppercase text-expanded" href="../review.html">Year in Review</a>
             </li>
             <li class="nav-item px-lg-4 dropdown">
               <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
                 Gateway to University Honors
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="pitch.html">Problem Pitch</a>
-                <a class="dropdown-item" href="gcsp.html">Global Citizen Scholar Plan</a>
+                <a class="dropdown-item" href="../pitch.html">Problem Pitch</a>
+                <a class="dropdown-item" href="../gcsp.html">Global Citizen Scholar Plan</a>
               </div>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
+              <a class="nav-link text-uppercase text-expanded" href="../contact.html">Contact</a>
             </li>
           </ul>
         </div>
