--- a/gcsp.html
+++ b/gcsp.html
@@ -47,7 +47,7 @@
             <a class="nav-link text-uppercase text-expanded" href="about.html">About Me</a>
           </li>
           <li class="nav-item px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="experiences.html">Honors Experiences</a>
+            <a class="nav-link text-uppercase text-expanded" href="experiences/index.html">Honors Experiences</a>
           </li>
           <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="review.html">Year in Review</a>
