updated experiences page

--- a/experiences.html
+++ b/experiences.html
@@ -83,7 +83,7 @@
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
               <p class="mb-0">
-                  Hoping for a good <em>experience</em> :P!
+                  A 6-day workshop to set you on the path of a great leader...
               </p>
             </div>
           </div>
