Annual review update

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -47,8 +47,14 @@
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="experiences/index.html">Honors Experiences</a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="review.html">Year in Review</a>
+            <li class="nav-item px-lg-4 dropdown">
+                <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
+                    Year in Review
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="review/freshman.html">Freshman</a>
+                    <a class="dropdown-item" href="review/sophomore.html">Sophomore</a>
+                </div>
             </li>
             <li class="nav-item px-lg-4 dropdown">
               <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
@@ -90,7 +96,7 @@
                   socially active parents, with a large age gap between me and all of my older
                   cousins, including my brother. These factors made me a very socially-awkward
                   person. So I spent a lot of years trying to overcome my introversion and make
-                  friends, but never succeeded. But soon I learnt how I can use my Introversion
+                  friends, but never succeeded. But soon I learnt how I can use my introverted nature
                   to my advantage.
                 </p>
                 <p>
@@ -99,7 +105,13 @@
                   do whatever I wanted through text commands felt amazing. And then my love 
                   of learning kicked in, which made me spend hours everyday learning about programming
                   and software development. School was boring, so I had a lot of time to dedicate
-                  to my newfound mission.
+                  to my newfound love.
+                </p>
+                <p>
+                  I am a problem solver. I have always been attracted to puzzles and riddles. I like
+                  how they compel you to move all the gears of your brain for one purpose - search for a
+                  solution. And successfully finding the solution is highly rewarding. This is why I was
+                  attracted to the Information Technology program - most of it is problem solving.
                 </p>
                 <p class="text-center">
                   <a href="resume.pdf">Check out my resume here!</a>
