--- a/review/sophomore.html
+++ b/review/sophomore.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Honors Experiences | Dev Agrawal</title>
+    <title>Year in Review | Dev Agrawal</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,16 +44,16 @@
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="../about.html">About Me</a>
             </li>
-            <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="index.html">Honors Experiences</a>
+            <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="../experiences/index.html">Honors Experiences</a>
             </li>
-            <li class="nav-item px-lg-4 dropdown">
+            <li class="nav-item active px-lg-4 dropdown">
                 <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
                     Year in Review
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="../review/freshman.html">Freshman</a>
-                    <a class="dropdown-item" href="../review/sophomore.html">Sophomore</a>
+                    <a class="dropdown-item" href="freshman.html">Freshman</a>
+                    <a class="dropdown-item" href="sophomore.html">Sophomore</a>
                 </div>
             </li>
             <li class="nav-item px-lg-4 dropdown">
@@ -73,32 +73,12 @@
       </div>
     </nav>
 
-    <section class="page-section">
-      <div class="container">
-          <h1 style="color: wheat">My Honors Experiences</h1>
-        <div class="product-item">
-          <a href="leadershape.html" style="color: black; text-decoration: none;">
-            <div class="product-item-title d-flex">
-              <div class="bg-faded p-5 d-flex ml-auto rounded">
-                <h2 class="section-heading mb-0">
-                  <span class="section-heading-upper">Jan 2019</span>
-                  <span class="section-heading-lower">LeaderShape Institute</span>
-                </h2>
-              </div>
-            </div>
-            <img class="leadershape product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="../img/products-01.png" alt="">
-            <div class="product-item-description d-flex mr-auto">
-              <div class="bg-faded p-5 rounded">
-                <p class="mb-0">
-                  Blooming leaders of tomorrow!
-                </p>
-              </div>
-            </div>
-          </a>
+    <section class="page-section clearfix">
+        <div class="container">
+          <h1 style="text-align: center; color: wheat;">Coming June 2020!</h1>
         </div>
-      </div>
-    </section>
-    
+      </section>
+
     <footer class="footer text-faded text-center py-5">
       <div class="container">
         <p class="m-0 small">Made by Davian Studios</p>
