--- a/experiences/leadershape.html
+++ b/experiences/leadershape.html
@@ -31,7 +31,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -47,8 +47,14 @@
             <li class="nav-item active px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="index.html">Honors Experiences</a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="../review.html">Year in Review</a>
+            <li class="nav-item px-lg-4 dropdown">
+                <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
+                    Year in Review
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="../review/freshman.html">Freshman</a>
+                    <a class="dropdown-item" href="../review/sophomore.html">Sophomore</a>
+                </div>
             </li>
             <li class="nav-item px-lg-4 dropdown">
               <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
