--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     <title>Welcome! Dev Agrawal</title>
-n
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -31,7 +31,7 @@ n
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-      <div class="container">
+      <div class="container-fluid">
         <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -47,8 +47,14 @@ n
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="experiences/index.html">Honors Experiences</a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="review.html">Year in Review</a>
+            <li class="nav-item px-lg-4 dropdown">
+                <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
+                    Year in Review
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="review/freshman.html">Freshman</a>
+                    <a class="dropdown-item" href="review/sophomore.html">Sophomore</a>
+                </div>
             </li>
             <li class="nav-item px-lg-4 dropdown">
               <a class="nav-link text-uppercase text-expanded dropdown-toggle" href="#" data-toggle="dropdown">
