updated about me

--- a/about.html
+++ b/about.html
@@ -85,33 +85,16 @@
                   <span class="section-heading-lower">About me</span>
                 </h2>
                 <p>
-                  I am Dev Agrawal (The name 'Dev' translates to 'God', but I don't let that 
-                  get to my head :P ). I am a first-year Information Technology major at the 
-                  University of Cincinnati. I am also an aspiring web and mobile developer, 
-                  and I have been involved in freelance development for 2 years.
+                  I am Dev Agrawal (The name 'Dev' translates to 'God', but I don't let that  get to my head :P ). I am a third-year Information Technology major at the University of Cincinnati. I am also a software developer, and currently I work at the UC IT Solutions Center.
                 </p>
                 <p>
-                  I was introduced into this world on the 9th of May 1999, the last summer of the 
-                  millenium, in the beautiful and diverse country of India. I was born to highly
-                  socially active parents, with a large age gap between me and all of my older
-                  cousins, including my brother. These factors made me a very socially-awkward
-                  person. So I spent a lot of years trying to overcome my introversion and make
-                  friends, but never succeeded. But soon I learnt how I can use my introverted nature
-                  to my advantage.
+                  I was introduced into this world on the 9th of May 1999, the last summer of the millenium, in the beautiful and diverse country of India. I was born to highly socially active parents, with a large age gap between me and all of my older cousins, including my brother. These factors made me a very socially-awkward person. So I spent most of my life trying to overcome my social anxiety, but never truly succeeded.
                 </p>
                 <p>
-                  I got interested into the field of computer science very early, when my
-                  brother introduced my to something called "C++". The power of making a computer
-                  do whatever I wanted through text commands felt amazing. And then my love 
-                  of learning kicked in, which made me spend hours everyday learning about programming
-                  and software development. School was boring, so I had a lot of time to dedicate
-                  to my newfound love.
+                  I got interested into the field of computer science very early, when my brother introduced my to something called "C++". The power of making a computer do whatever I wanted through text commands felt amazing. That's when my love  of learning kicked in, which made me spend hours everyday learning about programming and software development. School was boring, so I had a lot of time to dedicate to my newfound love.
                 </p>
                 <p>
-                  I am a problem solver. I have always been attracted to puzzles and riddles. I like
-                  how they compel you to move all the gears of your brain for one purpose - search for a
-                  solution. And successfully finding the solution is highly rewarding. This is why I was
-                  attracted to the Information Technology program - most of it is problem solving.
+                  I am a problem solver. I have always been attracted to puzzles and riddles. I like how they compel you to move all the gears of your brain for one purpose - search for a solution. And successfully finding the solution is highly rewarding. This is why I was attracted to the Information Technology program - most of it is problem solving.
                 </p>
                 <p class="text-center">
                   <a href="resume.pdf">Check out my resume here!</a>
